# replicating-simple-blackbox-attack

./: .gitignore  README.md  imagenet.py  pyproject.toml  simple-blackbox-attack.ipynb  simple_blackbox_attack.ipynb  simple_blackbox_attack.py
.github/workflows/: code_style.yml  python_tests.yml
imagenet/: imagenet.py
replicating_figures/: figure1.ipynb  figure2.ipynb
simple_blackbox_attack/: cartesian_set.py  dct_set.py  set_interface.py  simba.py
simple_blackbox_attack/simba/: figure1.py  simba.py
tests/: test_search_vectors.py
